--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/xmarcysx/-webpack-crash-course#readme",
   "devDependencies": {
+    "bootstrap": "^5.2.3",
     "css-loader": "^6.7.2",
+    "node-sass": "^8.0.0",
+    "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0"
