--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   "devDependencies": {
     "bootstrap": "^5.2.3",
     "css-loader": "^6.7.2",
+    "file-loader": "^6.2.0",
+    "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
     "node-sass": "^8.0.0",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.0"
+    "webpack-cli": "^5.0.0",
+    "webpack-merge": "^5.8.0"
   }
 }
